@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl $Id: configure.in,v 1.3 2006/09/04 11:43:29 ludvigm Exp $
+dnl $Id: configure.in,v 1.4 2006/09/04 13:11:21 ludvigm Exp $
 
 AC_INIT(mysqlfs, 0.2)
 AM_INIT_AUTOMAKE(dist-bzip2)
@@ -11,6 +11,7 @@ AC_DEFINE(FUSE_USE_VERSION,22,[Fuse API Version])
 AC_ARG_WITH(mysql, [  --with-mysql=DIR    mysql directory ])
 AC_ARG_WITH(fuse, [  --with-fuse=DIR    fuse directory ])
 
+CFLAGS_ADD="-Wall -Werror"
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -51,7 +52,7 @@ else
   MYSQL_CFLAGS="-I${MYSQL_INC_DIR}"
 fi
 LDFLAGS="$LDFLAGS $MYSQL_LDFLAGS"
-CFLAGS="$CFLAGS $MYSQL_CFLAGS"
+CFLAGS="$CFLAGS $CFLAGS_ADD $MYSQL_CFLAGS"
 
 dnl Checks for libraries.
 AC_CHECK_LIB(pthread, pthread_create,, AC_MSG_ERROR([Please install pthreads library first.]))
@@ -63,4 +64,5 @@ AC_CHECK_HEADERS(stdio.h)
 AC_CHECK_HEADERS(fuse.h,, AC_MSG_ERROR([Please install fuse header files.]))
 AC_CHECK_HEADERS(mysql/mysql.h,, AC_MSG_ERROR([Please install mysql header files.]))
 
+CFLAGS="$CFLAGS $CFLAGS_ADD"
 AC_OUTPUT(Makefile)
